--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VITE_API_URL=http://localhost:3000/api
+VITE_API_URL=https://inventory-backend-two-black.vercel.app/api
+BASE_API_URL=https://inventory-backend-two-black.vercel.app
